@@ -99,7 +99,7 @@ notice identical to this one.
 
 @ifinfo
 
-This is the documentation for version 1.20 of VICE, the Versatile
+This is the documentation for version 2.0 of VICE, the Versatile
 Commodore Emulator.
 
 @end ifinfo
